--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,14 @@
 [package]
-name = "re2-sys"
-version = "0.0.9+minimised"
+name = "re2-rs-parent"
+version = "0.1.0"
 edition = "2024"
-links = "re2"
-build = "build.rs"
 
-[dependencies]
-bindgen = "0.72.1"
-cc = "1"
-eyre = "0.6"
-libc = "0.2"
-
-[build-dependencies]
-pkg-config = "0.3"
-bindgen = "0.72.1"
-cc = "1.2.37"
-eyre = "0.6.12"
-glob = "0.3.3"
+[workspace]
+members = [
+    "re2-rs-icu",
+    "re2-rs",
+    "re2-rs-sys",
+    "re2-rs-wrapper",
+    "xtask",
+    "tests",
+]
