--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,3 @@
-[package]
-name = "re2-rs-parent"
-version = "0.1.0"
-edition = "2024"
-
 [workspace]
 members = [
     "re2-rs-icu",
@@ -12,3 +7,4 @@ members = [
     "xtask",
     "tests",
 ]
+resolver = "2"
